--- a/djangoproject/gestion_stock/templates/bonLivraisonEntreeadd.html
+++ b/djangoproject/gestion_stock/templates/bonLivraisonEntreeadd.html
@@ -42,7 +42,7 @@
                                     identifiant:<br><input type="text" id="umid" disabled class="form-control">
                                 </div>
                                 <div class="col-1">
-                                    <br><button class="ml-md-n3" id="accesslve"><i class="fas fa-arrow-right"></i></button>
+                                    <br><button class="ml-md-n3" id="accesslve"><i class="fa fa-arrow-right"></i></button>
                                 </div>
                                 <div class="col">
                                     <div class="selsel">
@@ -69,7 +69,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-1">
-                                    <br><button class="mt-lg-1" id="accesslve"><i class="fas fa-arrow-right"></i></button>
+                                    <br><button class="mt-lg-1" id="accesslve"><i class="fa fa-arrow-right"></i></button>
                                 </div>
                                 <div class="col">
                                     lettre de voiture :<br><input type="text" id="lve" disabled class="form-control">
@@ -133,7 +133,7 @@
                         <table id="tabume" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
                             <thead>
                             <tr>
-                                <th scope="col" class="th-sm"><i class="fas fa-cog"></i></th>
+                                <th scope="col" class="th-sm"><i class="fa fa-cog"></i></th>
                                 <th scope="col" class="th-sm"> n° UM </th>
                                 <th scope="col" class="th-sm"> emplacement </th>
                                 <th scope="col" class="th-sm"> désignation </th>
@@ -158,7 +158,7 @@
                 <br>
                 <div class="row ml-lg-1">
                     <div class="col-4">
-                        <button><i class="fas fa-plus"></i></button>
+                        <button><i class="fa fa-plus"></i></button>
                     </div>
                     <div class="col">
                         <button>numéroter</button>
@@ -174,7 +174,7 @@
                                 <table id="tabbcm" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
                                     <thead>
                                     <tr>
-                                        <th scope="col" class="th-sm"><i class="fas fa-cog"></i></th>
+                                        <th scope="col" class="th-sm"><i class="fa fa-cog"></i></th>
                                         <th scope="col" class="th-sm"> n° UM </th>
                                         <th scope="col" class="th-sm"> emplacement </th>
                                         <th scope="col" class="th-sm"> désignation </th>
@@ -265,7 +265,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="mx-auto">
-                                <p style="cursor: pointer;">fichier <i class="fas fa-file"></i></p>
+                                <p style="cursor: pointer;">fichier <i class="fa fa-file"></i></p>
                                 <p>photo <i class="far fa-image"></i></p>
                             </div>
                         </div>
@@ -300,11 +300,11 @@
                                                 <th colspan="5"><h5 class="text-center"><u>Comparaison réel</u></h5></th>
                                             </tr>
                                             <tr>
-                                                <th scope="col"><i class="fas fa-redo"></i></th>
+                                                <th scope="col"><i class="fa fa-redo"></i></th>
                                                 <th scope="col">code fournisseur</i></th>
                                                 <th scope="col">désignation</th>
                                                 <th scope="col">qte produits</th>
-                                                <th scope="col"><button class="btn btn-sm btn-dark"><i class="fas fa-sync"></i></button><br>
+                                                <th scope="col"><button class="btn btn-sm btn-dark"><i class="fa fa-sync"></i></button><br>
                                                     qte colis</th>
                                                 <th scope="col">contrôle</th>
                                                 <th scope="col">terminé</th>
@@ -570,7 +570,7 @@
                     $('#numberligne').val("");
                     $(this).dialog("close");
                     for (var nbr = nbrligne; nbr > 0; nbr--) {
-                        $('#tabblbody').append("<tr><td><button class='resetb' id=\"reset" + nbr + "\"><i class=\"fas fa-redo\"></i></button></td>" +
+                        $('#tabblbody').append("<tr><td><button class='resetb' id=\"reset" + nbr + "\"><i class=\"fa fa-redo\"></i></button></td>" +
                             "<td><select class=\"form-control fournise\" id=\"blfournisseur" + nbr + "\"></select></td>" +
                             "<td><select class=\"form-control desif\" id=\"iddesif" + nbr + "\"></select></td>" +
                             "<td><input class='form-control'></td>" +
