--- a/djangoproject/gestion_stock/templates/setting.html
+++ b/djangoproject/gestion_stock/templates/setting.html
@@ -8,10 +8,10 @@
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn btn-success" style="position:sticky;bottom: 0; margin-left: 45%;">Valider</button>
-        <button id="resetimg" type="button" class="btn btn-outline-blue-grey btn-sm"><i class="fas fa-undo"></i></button>
+        <button id="resetimg" type="button" class="btn btn-outline-blue-grey btn-sm"><i class="fa fa-undo"></i></button>
     </form>
 
-    <button type="button" id="createuserbtn" class="btn btn-info"><i class="fas fa-user-plus" style="font-size: 30px"></i></button>
+    <button type="button" id="createuserbtn" class="btn btn-info"><i class="fa fa-user-plus" style="font-size: 30px"></i></button>
 </div>
 </body>
 
