--- a/djangoproject/gestion_stock/templates/articlemodify.html
+++ b/djangoproject/gestion_stock/templates/articlemodify.html
@@ -214,7 +214,7 @@
                 <table id="dtBasicExample2" class="table table-striped table-responsive table-bordered table-sm" cellspacing="0" width="100%">
                     <thead>
                     <tr>
-                        <th scope="col" class="th-sm"> <i class="fas fa-cog"></i> </th>
+                        <th scope="col" class="th-sm"> <i class="fa fa-cog"></i> </th>
                         <th scope="col" class="th-sm"> stock </th>
                         <th scope="col" class="th-sm"> type article </th>
                         <th scope="col" class="th-sm"> fournisseur </th>
