--- a/djangoproject/gestion_stock/templates/bonLivraisonEntree.html
+++ b/djangoproject/gestion_stock/templates/bonLivraisonEntree.html
@@ -48,7 +48,7 @@
                     <table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
                         <thead>
                         <tr>
-                            <th scope="col" class="th-sm"><i class="fas fa-cog"></i></th>
+                            <th scope="col" class="th-sm"><i class="fa fa-cog"></i></th>
                             <th scope="col" class="th-sm"> dossier </th>
                             <th scope="col" class="th-sm"> date </th>
                             <th scope="col" class="th-sm"> numéro BL </th>
