--- a/djangoproject/gestion_stock/templates/bonlivraisonentreemodify.html
+++ b/djangoproject/gestion_stock/templates/bonlivraisonentreemodify.html
@@ -59,7 +59,7 @@
                                 <div class="col">
                                     <div class="input-group">
                                     <span class="input-group-btn">
-                                        <button class="btn btn-default btn-sm mb-n5 w-25" id="accesscli" type="button"><i class="fas fa-arrow-right"></i></button>
+                                        <button class="btn btn-default btn-sm mb-n5 w-25" id="accesscli" type="button"><i class="fa fa-arrow-right"></i></button>
                                     </span>
                                         <div class="selsel w-25">
                                             Client:<br><select class="form-control" id="client">
@@ -88,7 +88,7 @@
                                     <div class="col-3">
                                         lettre de voiture :
                                         <br><input type="text" id="lveinput" class="form-control w-responsive mx-auto text-center" disabled>
-                                        <button class="btn btn-default btn-sm w-25" id="accesslve" type="button"><i class="fas fa-arrow-up"></i></button>
+                                        <button class="btn btn-default btn-sm w-25" id="accesslve" type="button"><i class="fa fa-arrow-up"></i></button>
                                     </div>
                                 <div class="col-3">zone:<br><input type="text" id="zone" disabled class="form-control">
                                 </div>
@@ -148,7 +148,7 @@
                         <table id="tabume" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
                             <thead>
                             <tr>
-                                <th scope="col" class="th-sm"><i class="fas fa-cog"></i></th>
+                                <th scope="col" class="th-sm"><i class="fa fa-cog"></i></th>
                                 <th scope="col" class="th-sm"> n° UM </th>
                                 <th scope="col" class="th-sm"> emplacement </th>
                                 <th scope="col" class="th-sm"> désignation </th>
@@ -173,7 +173,7 @@
                 <br>
                 <div class="row ml-lg-1">
                     <div class="col-4">
-                        <button><i class="fas fa-plus"></i></button>
+                        <button><i class="fa fa-plus"></i></button>
                     </div>
                     <div class="col">
                         <button>numéroter</button>
@@ -189,7 +189,7 @@
                                 <table id="tabbcm" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
                                     <thead>
                                     <tr>
-                                        <th scope="col" class="th-sm"><i class="fas fa-cog"></i></th>
+                                        <th scope="col" class="th-sm"><i class="fa fa-cog"></i></th>
                                         <th scope="col" class="th-sm"> n° UM </th>
                                         <th scope="col" class="th-sm"> emplacement </th>
                                         <th scope="col" class="th-sm"> désignation </th>
@@ -280,7 +280,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="mx-auto">
-                                <p style="cursor: pointer;">fichier <i class="fas fa-file"></i></p>
+                                <p style="cursor: pointer;">fichier <i class="fa fa-file"></i></p>
                                 <p>photo <i class="far fa-image"></i></p>
                             </div>
                         </div>
@@ -315,11 +315,11 @@
                                                 <th colspan="5"><h5 class="text-center"><u>Comparaison réel</u></h5></th>
                                             </tr>
                                             <tr>
-                                                <th scope="col"><i class="fas fa-redo"></i></th>
+                                                <th scope="col"><i class="fa fa-redo"></i></th>
                                                 <th scope="col">code fournisseur</i></th>
                                                 <th scope="col">désignation</th>
                                                 <th scope="col">qte produits</th>
-                                                <th scope="col"><button class="btn btn-sm btn-dark"><i class="fas fa-sync"></i></button><br>
+                                                <th scope="col"><button class="btn btn-sm btn-dark"><i class="fa fa-sync"></i></button><br>
                                                     qte colis</th>
                                                 <th scope="col">contrôle</th>
                                                 <th scope="col">terminé</th>
@@ -453,7 +453,7 @@
 
             '{% for itemslb in entreeligne %}'
             if ('{{ itemslb.fk_BonLivraisonEntree }}' == '{{ items.idBonLivraisonEntree }}') {
-                $('#tabblbody').append("<tr><td><button class='resetb' id=\"reset" + nbr + "\"><i class=\"fas fa-redo\"></i></button></td>" +
+                $('#tabblbody').append("<tr><td><button class='resetb' id=\"reset" + nbr + "\"><i class=\"fa fa-redo\"></i></button></td>" +
                     "<td><select class=\"form-control fournise\" id=\"blfournisseur" + nbr + "\"></select></td>" +
                     "<td><select class=\"form-control desif\" id=\"iddesif" + nbr + "\"></select></td>" +
                     "<td><input class='form-control'></td>" +
@@ -765,7 +765,7 @@
                     $(this).dialog("close");
                     for (var mynbr = nbrligne; mynbr > 0; mynbr--) {
                         upperid++;
-                        $('#tabblbody').append("<tr><td><button class='resetb' id=\"reset" + mynbr+nbr + "\"><i class=\"fas fa-redo\"></i></button></td>" +
+                        $('#tabblbody').append("<tr><td><button class='resetb' id=\"reset" + mynbr+nbr + "\"><i class=\"fa fa-redo\"></i></button></td>" +
                             "<td><select class=\"form-control fournise\" id=\"blfournisseur" + mynbr+nbr + "\"></select></td>" +
                             "<td><select class=\"form-control desif\" id=\"iddesif" + mynbr+nbr + "\"></select></td>" +
                             "<td><input class='form-control'></td>" +
