--- a/djangoproject/gestion_stock/templates/colis.html
+++ b/djangoproject/gestion_stock/templates/colis.html
@@ -48,7 +48,7 @@
                     <table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
                         <thead>
                         <tr>
-                            <th class="th-sm"><i class="fas fa-cog"></i></th>
+                            <th class="th-sm"><i class="fa fa-cog"></i></th>
                             <th class="th-sm"> identifiant </th>
                             <th class="th-sm"> désignation fournisseur </th>
                             <th class="th-sm"> code client </th>
