--- a/djangoproject/gestion_stock/templates/lettrevoitureentree.html
+++ b/djangoproject/gestion_stock/templates/lettrevoitureentree.html
@@ -47,7 +47,7 @@
                     <table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
                         <thead>
                         <tr>
-                            <th scope="col" class="th-sm"><i class="fas fa-cog"></i></th>
+                            <th scope="col" class="th-sm"><i class="fa fa-cog"></i></th>
                             <th scope="col" class="th-sm"> date </th>
                             <th scope="col" class="th-sm"> n° réception </th>
                             <th scope="col" class="th-sm"> fournisseur </th>
