--- a/djangoproject/gestion_stock/templates/lettrevoitureentreeadd.html
+++ b/djangoproject/gestion_stock/templates/lettrevoitureentreeadd.html
@@ -33,7 +33,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="mx-auto">
-                                <p style="cursor: pointer;">fichier <i class="fas fa-file"></i></p>
+                                <p style="cursor: pointer;">fichier <i class="fa fa-file"></i></p>
                                 <p>photo <i class="far fa-image"></i></p>
                             </div>
                         </div>
@@ -75,7 +75,7 @@
                                         <div class="col">
                                             <div class="row">
                                                 <div class="col-1">
-                                                    <button id="accesslve" style="width: 50%; height: 30px;" class="rounded mt-4"><i style="font-size: 50%" class="fas fa-arrow-right"></i></button>
+                                                    <button id="accesslve" style="width: 50%; height: 30px;" class="rounded mt-4"><i style="font-size: 50%" class="fa fa-arrow-right"></i></button>
                                                 </div>
                                                 <div class="col">
                                                     <div class="selsel">
@@ -132,7 +132,7 @@
                         <table id="tabbl" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
                             <thead>
                             <tr>
-                                <th scope="col" class="th-sm text-center"><i class="fas fa-cog"></i></th>
+                                <th scope="col" class="th-sm text-center"><i class="fa fa-cog"></i></th>
                                 <th scope="col" class="th-sm text-center"> client </th>
                                 <th scope="col" class="th-sm text-center"> date réception </th>
                                 <th scope="col" class="th-sm text-center"> n° BL </th>
@@ -152,7 +152,7 @@
                             {% endfor %}
                             </tbody>
                         </table>
-                        <button class="btn btn-blue btn-sm" id="addlignebl"><i class="fas fa-plus"></i></button>
+                        <button class="btn btn-blue btn-sm" id="addlignebl"><i class="fa fa-plus"></i></button>
                     </div>
                 </div>
             </div>
@@ -183,7 +183,7 @@
                         <table id="tabbcm" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
                             <thead>
                             <tr>
-                                <th scope="col" class="th-sm"><i class="fas fa-cog"></i></th>
+                                <th scope="col" class="th-sm"><i class="fa fa-cog"></i></th>
                                 <th scope="col" class="th-sm"> id </th>
                                 <th scope="col" class="th-sm"> date </th>
                                 <th scope="col" class="th-sm"> <i class="fa fa-trash"></i> </th>
@@ -276,12 +276,12 @@
                     $('#numberligne').val("");
                     $(this).dialog("close");
                     for (var nbr = nbrligne; nbr > 0; nbr--) {
-                        $('#tabblbody').append("<tr><td class='text-center'><button class='resetb' id=\"reset" + nbr + "\"><i class=\"fas fa-arrow-right\"></i></button></td>" +
+                        $('#tabblbody').append("<tr><td class='text-center'><button class='resetb' id=\"reset" + nbr + "\"><i class=\"fa fa-arrow-right\"></i></button></td>" +
                             "<td class='text-center'><input disabled class='form-control'></td>" +
                             "<td><input disabled class='form-control'></td>" +
                             "<td><input disabled class='form-control'></td>" +
                             "<td><input disabled class='form-control'></td>" +
-                            "<td class='text-center'><button class='resetb btn btn-light btn-sm' id=\"reset" + nbr + "\"><i class=\"fas fa-trash-alt\"></i></button></td>");
+                            "<td class='text-center'><button class='resetb btn btn-light btn-sm' id=\"reset" + nbr + "\"><i class=\"fa fa-trash-alt\"></i></button></td>");
                         '{% for items in art %}'
                         $("select.fournise:last").append(new Option("{{ items.codeFournisseur }}", "{{ items.codeFournisseur }}"));
                         $("select.desif:last").append(new Option("{{ items.designationClient }}", "{{ items.designationClient }}"));
