--- a/djangoproject/gestion_stock/templates/unitemanutentionentreeadd.html
+++ b/djangoproject/gestion_stock/templates/unitemanutentionentreeadd.html
@@ -30,7 +30,7 @@
                 <div class="col-auto">
                     <label for="compum">UM incomplets: </label>
                     <button id="compum" class='btn btn-sm btn-success'>
-                        <i class="fas fa-thumbs-up"></i>
+                        <i class="fa fa-thumbs-up"></i>
                     </button>
                 </div>
 
@@ -44,7 +44,7 @@
                 <div class="col-4">
                     <div class="form-group form-inline">
                         <label for="blum"><button class="btn btn-sm btn-light">
-                            <i class="fas fa-chevron-right" style="font-size: 15px;"></i>
+                            <i class="fa fa-chevron-right" style="font-size: 15px;"></i>
                         </button>bon de livraison: </label>
                         <input type="text" class="form-control w-25" id="blum" disabled>
                     </div>
@@ -68,7 +68,7 @@
 
                 <div class="col-auto">
                     <br>
-                    <button class="btn btn-outline-blue-grey"><i class="fas fa-print" style="color: darkblue; font-size: 20px;"></i></button>
+                    <button class="btn btn-outline-blue-grey"><i class="fa fa-print" style="color: darkblue; font-size: 20px;"></i></button>
                 </div>
 
                 <div class="col-auto">
@@ -146,7 +146,7 @@
                 </div>
             </div>
             <div class="text-right">
-                <button type="button" class="btn btn-blue-grey" id="saveume">Save&nbsp;<i class="fas fa-check"></i></button>
+                <button type="button" class="btn btn-blue-grey" id="saveume">Save&nbsp;<i class="fa fa-check"></i></button>
             </div>
         </div>
     </div>
@@ -163,8 +163,8 @@
                             <table id="tabbl" class="table table-condensed table-sm table-striped table-bordered" cellspacing="0" width="100%">
                                 <thead>
                                 <tr>
-                                    <th scope="col"><i class="fas fa-copy"></i></th>
-                                    <th scope="col"><i class="fas fa-plus"></i></th>
+                                    <th scope="col"><i class="fa fa-copy"></i></th>
+                                    <th scope="col"><i class="fa fa-plus"></i></th>
                                     <th scope="col">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;n°colis&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
                                     <th scope="col">code fournisseur</th>
                                     <th scope="col">&nbsp;désignation&nbsp;</th>
@@ -173,15 +173,15 @@
                                     <th scope="col" class="text-center">qte<br>par colis</th>
                                     <th scope="col">litige</th>
                                     <th scope="col">numéroter</th>
-                                    <th scope="col"><i class="fas fa-arrow-right"></i></th>
-                                    <th scope="col"><i class="fas fa-redo"></i> </th>
+                                    <th scope="col"><i class="fa fa-arrow-right"></i></th>
+                                    <th scope="col"><i class="fa fa-redo"></i> </th>
                                     <th scope="col">U.M sortie</th>
                                     <th scope="col">numéro </th>
                                     <th scope="col">confirmer</th>
                                     <th scope="col">date expédition</th>
-                                    <th scope="col"><i class="fas fa-unlink"></i></th>
+                                    <th scope="col"><i class="fa fa-unlink"></i></th>
                                     <th scope="col">Retour ancien<br>n° colis</th>
-                                    <th scope="col"><i class="fas fa-trash"></i></th>
+                                    <th scope="col"><i class="fa fa-trash"></i></th>
                                     <th scope="col">collée</th>
                                     <th scope="col">imprimer</th>
                                 </tr>
@@ -202,7 +202,7 @@
                         </div>
                     </div>
                 </div>
-                <button class="btn btn-sm btn-dark" id="addligne" disabled><i class="fas fa-plus"></i></button>
+                <button class="btn btn-sm btn-dark" id="addligne" disabled><i class="fa fa-plus"></i></button>
             </div>
         </div>
     </div>
@@ -221,11 +221,11 @@
         $('#compum').click(function () {
             if ($(this).hasClass('btn btn-sm btn-success')) {
                 $(this).attr('class', 'btn btn-light btn-sm butctrl');
-                $(this).find('i').attr('class', 'fas fa-thumbs-down');
+                $(this).find('i').attr('class', 'fa fa-thumbs-down');
             }
             else {
                 $(this).attr('class', 'btn btn-sm btn-success');
-                $(this).find('i').attr('class', 'fas fa-thumbs-up');
+                $(this).find('i').attr('class', 'fa fa-thumbs-up');
             }
         });
 
@@ -250,8 +250,8 @@
                     $('#numberligne').val("");
                     $(this).dialog("close");
                     for (var nbr = nbrligne; nbr > 0; nbr--) {
-                        $('#tabblbody').append("<tr><td><button class='duplique' id=\"duplicate" + nbr + "\"><i class=\"fas fa-copy\"></i></button></td>" +
-                            "<td><button class='ajout' id=\"add" + nbr + "\"><i class=\"fas fa-plus\"></i></button></td>" +
+                        $('#tabblbody').append("<tr><td><button class='duplique' id=\"duplicate" + nbr + "\"><i class=\"fa fa-copy\"></i></button></td>" +
+                            "<td><button class='ajout' id=\"add" + nbr + "\"><i class=\"fa fa-plus\"></i></button></td>" +
                             "<td><input class='form-control'></td>" +
                             "<td><select class=\"form-control fournise\" id=\"blfournisseur" + nbr + "\"></select></td>" +
                             "<td><select class=\"form-control desif\" id=\"iddesif" + nbr + "\"></select></td>" +
@@ -266,7 +266,7 @@
                             "<td><input class='form-control'></td>" +
                             "<td><input class='form-control'></td>" +
                             "<td><input class='form-control'></td>" +
-                            "<td><button class=\"deleteur btn btn-sm rounded-pill\"> <i class=\"fas fa-trash\"></i> </button> </td>" +
+                            "<td><button class=\"deleteur btn btn-sm rounded-pill\"> <i class=\"fa fa-trash\"></i> </button> </td>" +
                             "<td><input class='form-control'></td>" +
                             "<td><input class='form-control'></td></tr>");
                         '{% for items in art %}'
