ume normalement ok
Début des bon commandes sorties,
puis attaque csv quand le design des bcs ok,
commencer par le parsing csv, puis l'ajout de data
avec gestion erreurs

--- a/djangoproject/gestion_stock/templates/base_generic.html
+++ b/djangoproject/gestion_stock/templates/base_generic.html
@@ -468,9 +468,9 @@
     });
 
 
-    $(document).ajaxStop(function() {
+ /*   $(document).ajaxStop(function() {
       window.location.reload();
-    });
+    });*///fonction pour recharger les datas après certains ajax successfull, car asynchrone, donc doit avoir la sécurité de ajaxstop
   });
 
   //ce widget permet d'avoir des input qui servent aussi de select donc 2 en 1 je l'utilise dans plusieurs templates il vient de JQuery UI
